[project]
name = "pyrmapi"
version = "0.1.0"
description = "A Python wrapper and future reimplementation of rmapi for accessing reMarkable tablet files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brooks McMillin"},
]
maintainers = [
    {name = "Brooks McMillin"},
]
keywords = ["remarkable", "tablet", "e-ink", "pdf", "documents", "cloud", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.16.1",
]

[project.urls]
Homepage = "https://github.com/brooksmcmillin/pyrmapi"
Repository = "https://github.com/brooksmcmillin/pyrmapi"
Issues = "https://github.com/brooksmcmillin/pyrmapi/issues"
Documentation = "https://github.com/brooksmcmillin/pyrmapi#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
pyrmapi = "pyrmapi.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyrmapi"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py311"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=pyrmapi --cov-report=term-missing --cov-report=html"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
